TestSuite/PascalABCTests/errors/err0240.pas
begin
  var s: string;
  if 'asd' is string(s) then
    Print(1);
end.